# vintage-music

./: .ghci  .gitignore  Music.cabal  README.md  TODO  modules.dot  test.hs  testNotation.hs
doc/: Makefile  Music.markdown
ideas/: Dynamic levels.txt  ExtRecs.hs  Layout.txt  Lines.hs  Model.hs  Overview.txt  Phrasing.hs  TCM.hs  TempTrans.hs  Temporal semantics.lhs  Visual.hs
ideas/Notation/: Notable.txt
info/: modules.dot
src/: Main.hs  Music.hs
src-notab/Music/Notable/: Beaming.hs  Core.hs  Engraving.hs  Paging.hs  Spacing.hs  Voicing.hs
src-notab/Music/Notable/Core/: Diagrams.hs  Symbols.hs
src-notab/Music/Notable/Core/Diagrams/: Cairo.hs
src-notab/Music/Notable/Engraving/: Chord.hs  Staff.hs  System.hs
src-notab/Notable/: Beaming.hs  Core.hs  Inspect.hs  Paging.hs  Spacing.hs  Voicing.hs
src-notab/Notable/Core/: Diagrams.hs  Glyphs.hs  Symbols.hs
src-notab/Notable/Core/Diagrams/: Cairo.hs
src-notab/Notable/Engraving/: Chord.hs  Staff.hs  System.hs
src-proj/Music/Projects/: MusicaVitae.lhs
src-proj/Music/Projects/MusicaVitae/: Instructions.markdown  Main.hs  Makefile  Michael.markdown  Random.hs
src/Control/: Parrow.hs  PartialFunction.hs
src/Data/: Bijection.hs  Convert.hs  Index.hs  Indexed.hs  Relation.hs  Trivial.hs  Undefined.hs
src/Data/List/: Index.hs
src/Music/: Dynamics.hs  Inspect.hs  Model.hs  Phrasing.hs  Pitch.hs  Render.hs  Space.hs  Time.hs  Util.hs  Utilities.hs
src/Music/Internal/Time/: Score.hs
src/Music/Model/: Abc.hs  GUIDO.hs  General.hs  General.lhs  MIDI.hs  MusicXML.hs  Standard.hs
src/Music/Model/MusicXML/: Articulations.hs  Attributes.hs  Base.hs  Harmony.hs  Image.hs  Layout.hs  Note.hs  Opus.hs  Score.hs  Sound.hs  Text.hs  Tuplet.hs  Write.hs
src/Music/Model/Standard/: Instrumentation.hs  Phrasing.hs  Pitch.hs  Time.hs
src/Music/Model/Temporal/: Media.hs
src/Music/Projects/: MusicaVitae.lhs  StringQuartet.lhs
src/Music/Projects/MusicaVitae/: Makefile
src/Music/Render/: Graphics.hs  Midi.hs
src/Music/Render/Graphics/: Diagrams.hs
src/Music/Time/: Event.hs  EventList.hs  Functors.hs  Overlay.hs  Score.hs  Segment.hs  Tremolo.hs
src/Music/Util/: Either.hs  List.hs  System.hs
src/Projects/: MusicaVitae.hs
src/System/Random/: Seq.hs
text/Music/html/: UserGuide.html
text/Projects/MusicaVitae/html/: MusicaVitae.html
