
Name:                   Music
Version:                1.1
Cabal-Version:          >= 1.10
Synopsis:               Music creation and manipulation
Category:               Sound, Music

Author:                 Hans Höglund
Maintainer:             hans@hanshoglund.se
License:                GPL
Copyright:              (c) 2008-2012 by Hans Höglund
Stability:              experimental
Build-Type:             Simple

Library
    Build-Depends:      base, 

                        unix, 
                        hxt, 
                        containers,         
                        split,     
                        random,

                        vector-space,
                        colour >= 2.3.1,
                        diagrams >= 0.4,
                        diagrams-cairo >= 0.4,
                        diagrams-core >= 0.4,
                        diagrams-lib >= 0.4,

                        HCodecs >= 0.2.2,
                        binary >= 0.5.0.2,
                        
                        temporal-media, 
                        temporal-music-notation, 
                        temporal-music-notation-demo, 
                        temporal-music-notation-western

    Default-Language:   Haskell2010

    Hs-Source-Dirs:     src

    Default-Extensions: 

    Exposed-Modules:
        
        -- Data.Trivial
        -- Data.Undefined
        -- Data.Bijection
        Data.Convert
        Data.Relation
        
        Music

        Music.Time
        Music.Time.Functors
        Music.Time.Event
        Music.Time.EventList
        Music.Time.Score
        Music.Time.Segment
        Music.Time.Tremolo
        Music.Pitch
        Music.Dynamics
        Music.Phrasing
        Music.Space
        
        Music.Render
        Music.Render.Graphics
        Music.Render.Midi

        Music.Inspect 
        
        -- Music.Model.Abc
        -- Music.Model.General
        -- Music.Model.Standard
        -- Music.Model.Standard.Time
        -- Music.Model.Standard.Pitch
        -- Music.Model.Standard.Phrasing
        -- Music.Model.Standard.Instrumentation

        -- Music.Model.Temporal.Media
        -- Music.Model.GUIDO
        -- Music.Model.MIDI

        -- Music.Model.MusicXML
        -- Music.Model.MusicXML.Base
        -- Music.Model.MusicXML.Articulations
        -- Music.Model.MusicXML.Attributes
        -- Music.Model.MusicXML.Harmony
        -- Music.Model.MusicXML.Image
        -- Music.Model.MusicXML.Layout
        -- Music.Model.MusicXML.Note
        -- Music.Model.MusicXML.Opus
        -- Music.Model.MusicXML.Score
        -- Music.Model.MusicXML.Sound
        -- Music.Model.MusicXML.Text
        -- Music.Model.MusicXML.Tuplet
        -- Music.Model.MusicXML.Write           
        -- 
        Music.Projects.MusicaVitae
        -- Music.Projects.StringQuartet 

        Music.Util.List
        Music.Util.System


   Other-Modules:
        Music.Internal.Time.Score

